[tool.poetry]
name = "langchain_autogen_rag"
version = "0.1.0"
description = "Tutorial from https://github.com/sugarforever LangChain-Advanced"
authors = ["iangalvao <iansgalvao@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyautogen = "^0.2.2"
langchain = "^0.0.348"
chromadb = "^0.4.18"
pypdf = "^3.17.2"
openai = "^1.3.8"
docker = "^7.0.0"
jupyter = ">=1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
